--- a/app/views/postimages/index.html.erb
+++ b/app/views/postimages/index.html.erb
@@ -1,11 +1,1 @@
-<% @postimages.each do |postimage| %>
-<diV>
-  <%= link_to postimage_path(postimage.id) do %>
-    <%= image_tag postimage.get_image %>
-  <% end %>
-  <p>投稿ユーザー画像: <%= image_tag 'sample-author1.jpg' %></p>
-  <p>ショップ名: <%= postimage.shop_name %></p>
-  <p>説明: <%= postimage.caption %></p>
-  <p>ユーザーネーム: <%= postimage.user.name %></p>
-</diV>
-<% end %>
+<%= render 'list', postimages: @postimages %>
