aboutページの編集

--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,1 +1,9 @@
-<h1>Aboutページ</h1>
+<div class="container">
+  <p class="text-center display-1">
+    <strong>About</strong>
+  </p>
+  <h3 class="text-center">
+    このサービスでは食べ物の写真を投稿しましょう!<br>
+    皆さんのよだれの出るようなおいしそうな写真お待ちしてます！
+  </h3>
+</div>
