--- a/app/views/postimages/_list.html.erb
+++ b/app/views/postimages/_list.html.erb
@@ -7,6 +7,7 @@
     <div class="card-body">
       <div class="row">
         <div class="col-2">
+          <!--プロフィール画像-->
           <%= image_tag postimage.user.get_profile_image(100,100), class:"mt-3 rounded-circle"; %>
         </div>
         <div class="col-10">
